# botcity-rpa-template

./: .gitignore  LICENSE  bot.py  build.ps1  deploy.bat  pyproject.toml  readme.md  requirements.txt
botcity/: botcity_local.py  botcity_maestro.py
botcity/core/: config.py  logger.py
botcity/domain/enums/: recurrence.py
botcity/enums/: department.py
botcity/runner/: botcity_local.py  botcity_maestro.py
botcity/services/: sharepoint.py  sharepoint_service.py
botcity/settings/: base_settings.py  botcity_local_settings.py  botcity_maestro_settings.py
botcity/utils/: logger.py
botcity_aux/: bot_runner.py  logger_config.py  sharepoint_config.py  telegram_plugin.py
botcity_aux/sql/query/: insert_log.sql
core/: config.py  logging.py  sharepoint_wrapper.py  sql_database_connector.py
enums/: department.py
queries/: Insert Data into Database LOG.sql
src/: main.py
