[project]
name = "rpa-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Vinicius",email = "vinicius.arruda40@hotmail.com"}
    {name = "Juan",email = "juan654.pablo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "gputil (>=1.4.0,<2.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "botcity-maestro-sdk (>=0.8.0,<0.9.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "office365-rest-python-client (>=2.6.2,<3.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)"
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
